# BitSentry

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml  run.py
bitsentry/: __init__.py  audit_engine.py  bgc_client.py  cli.py  position_monitor.py  reporter.py  risk_guardian.py  scheduler.py  strategy_evaluator.py
bitsentry/api/: server.py
bitsentry/mcp/: __init__.py  server.py
config/: risk_rules.yaml
dashboard/: index.html
examples/: agent_hub_integration.py
landing/: index.html
npm-package/: README.md  index.js  package.json
validation/: audit_report.html  mcp_tool_proof.json
